# nhoa_upo_yolo_sgg

./: CMakeLists.txt  README.md  package.xml
launch/: sggen.launch  yolov8.launch
src/: ros_node_common.hpp  ros_onnx_mixin.hpp  sggen_host.cpp  sggen_model.cpp  sggen_model.hpp  yolov8_host.cpp  yolov8_model.cpp  yolov8_model.hpp
src/util/: letterbox.hpp  onto_file.hpp  parsed_file.hpp  semvec_file.hpp
